@@ -5,6 +5,10 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/06/08
+- TestEngine: Made failed IM_CHECK() with io.ConfigBreakOnError enabled call IM_DEBUG_BREAK()
+  directly instead of calling IM_ASSERT(0).
+
 2023/05/31
 - TestEngine: Added ctx->ItemIsChecked() and ctx->ItemIsOpened() helpers.
 
